# pyshot

./: .copilot-review-instructions.md  .copilot-test-instructions.md  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_collection.json
.devcontainer/: devcontainer.json
.github/workflows/: test_and_package.yml
pyshot/: __init__.py  database.py  main.py  models.py  repo.py  screenshot_router.py
pyshot/routers/: screenshot_router.py
pyshot/utils/: screenshot_utils.py
tests/: conftest.py  test_integration.py  test_screenshot_router.py
tests/integration/: test_docker_service.py
